# 02-dicom-mpr-viewer

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
.trae/documents/: prd.md  tech-architecture.md
src/: style.css
src/components/: ControlPanel.vue  MPRViewer.vue  MaskPanel.vue  StatusBar.vue  Toolbar.vue  ViewportPanel.vue
src/concurrency/: DoubleBufferManager.ts  TaskScheduler.ts
src/dicom/: dicomParser.ts
src/mask/: MaskManager.ts
src/pages/: HomePage.vue
src/rendering/: VolumeRenderer.ts
src/rendering/shaders/: raymarch.frag  raymarch.vert  volume.frag  volume.vert
src/types/: index.ts
src/volume/: VolumeBuilder.ts  phantomData.ts
src/workers/: VolumeWorkerManager.ts  volumeProcessor.worker.ts
wasm/: CMakeLists.txt
wasm/src/: VolumeBuilder.cpp  VolumeBuilder.h  binding.cpp
